--- a/app/src/main/res/layout/activity_banks.xml
+++ b/app/src/main/res/layout/activity_banks.xml
@@ -21,18 +21,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:textColor="@color/blue"
             android:text="В кассах банков"
+            android:layout_marginEnd="20dp"
             android:textAlignment="textEnd" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:textColor="@color/blue"
-            android:text="При оплате картой"
-            android:textAlignment="textEnd" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
