--- a/app/src/main/res/layout/card_item_banks.xml
+++ b/app/src/main/res/layout/card_item_banks.xml
@@ -14,10 +14,12 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/imageViewBanks"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"/>-->
+        <ImageView
+            android:id="@+id/imageViewBanks"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="30dp"/>
 
         <TextView
             android:id="@+id/textViewTitle"
@@ -37,15 +39,7 @@
             android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_weight="1"
-            android:text="text"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+
 
 
     </LinearLayout>
